alignment fix

--- a/styles/ChordDisplay.module.css
+++ b/styles/ChordDisplay.module.css
@@ -1,12 +1,12 @@
 @media only screen and (max-width: 700px) {
   .wrapDiv {
-    width: 90%;
+    max-width: 90%;
     flex-direction: column;
   }
   .famDiv {
     padding-inline-end: 0.5rem;
     padding-inline-start: 0.5rem;
-    padding-block-end: 3rem;
+    padding-block-end: 2rem;
     margin-inline-end: 3rem;
     margin-inline-start: 3rem;
     flex-direction: row;
@@ -45,7 +45,7 @@
 .wrapDiv {
   display: flex;
 }
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 701px) {
   .famDiv {
     padding-inline-end: 2rem;
     padding-inline-start: 2rem;
@@ -75,7 +75,7 @@
   }
 }
 .famDiv {
-  width: 100%;
+  max-width: 100%;
   display: flex;
   border-radius: 10rem;
   flex-direction: column;
@@ -126,7 +126,7 @@
   background: none;
 }
 .buttonDiv {
-  width: 100%;
+  max-width: 100%;
   height: 100%;
 }
 .toggleSevens {
