--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,8 +3,8 @@
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
+  min-height: 150vh;
+  min-width: 100vh;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -15,7 +15,7 @@
 .canvasBackgroud{
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 200%;
     margin: 0;
     pointer-events: none;
 }
@@ -116,6 +116,8 @@
 }
 .chordsDisplay{
     width:100%;
+    display: flex;
+    justify-content: center;
 }
 }
 
